--- a/vercel.json
+++ b/vercel.json
@@ -2,27 +2,31 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/smart-coin-backend/server.js"
+            "destination": "/api"
         },
         {
             "source": "/(.*)",
             "destination": "/smart-coin-frontend/$1"
         }
     ],
-    "projects": [
+    "functions": {
+        "smart-coin-backend/server.js": {
+            "runtime": "nodejs18.x"
+        }
+    },
+    "builds": [
         {
-            "name": "smart-coin-frontend",
-            "root": "smart-coin-frontend",
-            "buildCommand": "npm run build",
-            "outputDirectory": "smart-coin-frontend/.next",
-            "devCommand": "npm run dev"
+            "src": "smart-coin-frontend/package.json",
+            "use": "@vercel/next"
         },
         {
-            "name": "smart-coin-backend",
-            "root": "smart-coin-backend",
-            "buildCommand": "npm install",
-            "outputDirectory": "smart-coin-backend",
-            "devCommand": "node server.js"
+            "src": "smart-coin-backend/server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "smart-coin-backend/**"
+                ]
+            }
         }
     ]
 }
