تحويل المشروع للعمل على قاعدة بيانات خارجية (Postgres/Supabase) وتحديث جميع الدوال والملفات

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ MAIL_USERNAME=enayabasmaji9@gmail.com
 MAIL_PASSWORD=yymu fxwr hnws yzxu
 ADMIN_EMAIL=enayabasmaji9@gmail.com
 FRONTEND_URL=https://your-frontend.vercel.app
+DATABASE_URL=postgresql://postgres:Enaya123456789012345zaq@aws-1-us-east-1.pooler.supabase.com:6543/postgres
